--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,9 @@ description: > # this means to ignore newlines until "baseurl:"
   Specifically those organizations and individuals with access to massive suppoprt, influence and resources.
   
   By all means - this is the best way to expand human co-creation and collaboration state-of-the-art communication.
-  Join us in this noble quest to propagate useful information about 'Social Programs That Deliver SDG Values'
+  Join us in this noble quest to propagate useful information about 'Social Programs That Deliver SDG Values'.
+  
+  stay tuned frost more
 
 # social links
 twitter_username: your-twitter-handle
