--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
+title: UP20 Blog
+author: UP20 Member
+email: info@tempdomain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  UP20 is an opensource community project aiming to expand and facilitate social programs
+  all around the globe. UP20 members are dedicated to sharing community programs and best
+  practices. Find us on github and come share your knowledge with other UP20 members.
 
 # social links
-twitter_username: your-twitter-handle
-github_username:  your-github-handle
+twitter_username: twitter-handle
+github_username:  github-handle
 
 show_excerpts: true # set to false to remove excerpts on the homepage
 
