--- a/_config.yml
+++ b/_config.yml
@@ -12,5 +12,5 @@ github_username:  github-handle
 
 show_excerpts: true # set to false to remove excerpts on the homepage
 
-theme: minima
+theme: jekyll-theme-tactile
 
